# galaxea_arm_a1x_moveit2

./: .gitignore  README.md
a1x/: CMakeLists.txt  package.xml  setup.cfg  setup.py
a1x/launch/: display_robot.launch.py  gazebo.launch.py
a1x/rviz/: view.rviz
a1x/urdf/: a1x.urdf
a1x_hardware_bridge/: package.xml  setup.cfg  setup.py
a1x_hardware_bridge/a1x_hardware_bridge/: a1x_bridge.py
a1x_hardware_bridge/launch/: a1x_bridge.launch.py
a1x_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
a1x_moveit_config/config/: a1x.ros2_control.xacro  a1x.srdf  a1x.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers copy.yaml  ros2_controllers.yaml
a1x_moveit_config/launch/: demo.launch.py  demo_with_hardware.launch.py  move_group.launch.py  moveit_rviz.launch.py  ros2_control.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
arm_endeffector_control/: package.xml  setup.cfg  setup.py
arm_endeffector_control/arm_endeffector_control/: __init__.py  cartesian_path_planner.py  endeffector_control_node.py  move_to_pose.py
arm_endeffector_control/launch/: endeffector_control_launch.py  move_to_pose_only_launch.py
hdas_moveit_bridge/: package.xml  setup.cfg  setup.py
