<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_endeffector_control</name>
  <version>0.0.0</version>
  <description>Package for controlling robot arm end-effector using MoveIt2</description>
  <maintainer email="lp@example.com">robot</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>moveit2</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-numpy</depend>
  <depend>moveit_msgs</depend>
  <depend>trajectory_msgs</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>